Small fix for subscribing to events

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         addWagon(origin.data.user_name);
                 }
                 if(eventData.data.topic === "channel-subscribe-events-v1.38486263") {
-                    addWagon(origin.data.user_name);
+                    addWagon(origin.user_name);
                 }
             }
         });
